# insights

./: README_DEPLOY.md  daniel-rapport.html
.github/workflows/: deploy-vps.yml
api/: .env.example  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
api/app/: config.py  main.py
api/app/dependencies/: auth.py
api/app/middleware/: quotas.py
api/app/routers/: accounts.py  auth.py  billing.py  data.py
api/app/services/: demographics_fetcher.py  meta_client.py  refresher.py
docs/: data_loader_saas.js  index-landing.html  index-saas.html  index.html  oauth-callback.html  theaipipe-config.js
docs/i18n/: da.json  en.json  es.json  i18n.js  nl.json
docs/js/: dashboard-app.js  supabase-auth.js
